src/styles/blocks/features.scss
.features {
  text-align: center;

  @include onTablet {
    text-align: left;
  }

  &__title {
    margin-bottom: 25px;
    text-align: left;
    font-size: 58px;
    line-height: 1.2;
    color: $accent-text;
    letter-spacing: 0.13em;

    @include onTablet {
      margin-bottom: 52px;
    }
  }

  &__accent {
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 1px;
    -webkit-text-stroke-color: $accent-text;
  }

  &__item:not(:last-child) {
    margin-bottom: 70px;

    @include onTablet {
      margin-bottom: 0;
    }
  }

  &__photo-container {
    margin-bottom: 35px;
    position: relative;
    width: 100%;
    max-height: 260px;

    &::after {
      content: "";
      display: block;
      padding-bottom: 100%;
    }

    @include onTablet {
      max-height: 220px;
    }
    @include onLaptop {
      max-height: 370px;
    }
  }

  &__img {
    position: absolute;
    height: 100%;
    object-fit: cover;
    object-position: center bottom;
  }

  &__subtitle {
    margin-bottom: 20px;
    font-size: 24px;
    line-height: 1;
    letter-spacing: 0.13em;
    color: $main-title;
  }

  &__desc {
    @include Manrope(400, 16px);

  }
}

